--- a/index.html
+++ b/index.html
@@ -2,15 +2,23 @@
 <html>
 <head>
 	<title>Hero Vs. Villain</title>
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="Person.js"></script>
 	<script src="Hero.js"></script>
 	<script src="Villain.js"></script>
 	<script src="Weapon.js"></script>
 	<script src="script.js"></script>
-	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
 	
-	
+	<div class="hero">
+		
+	</div>
+
+	<div class="villain">
+		
+	</div>
+	<button id="heroAttack">Hero Attack</button>
+	<button id="villainAttack">Weapon Attack</button>
 </body>
 </html>
